--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -46,7 +46,7 @@
 
 .containerInicial {
     padding-bottom: 119px;
-    padding-top: 80px;
+    padding-top: 120px;
 }
 
 .contactContainer {
@@ -57,7 +57,6 @@
 .squareContact {
     border: 2px solid #D8C7C7;
     width: 327px;
-    background: #1F2235;
     border-radius: 5px;
     margin-right: 15px;
     margin-bottom: 5px;
@@ -90,9 +89,9 @@ h4,
     justify-content: space-evenly;
 }
 
-#contactame {
+/* #contactame {
     margin-top: 50px;
-}
+} */
 
 .display-1 {
     color: #74d3ae;
@@ -240,3 +239,6 @@ h6 {
     font-weight: 600;
 
 }
+
+
+
