--- a/src/components/main/abilities/tecs.css
+++ b/src/components/main/abilities/tecs.css
@@ -2,7 +2,8 @@
     grid-template-columns: repeat(16, minmax(auto, 60px));
 }
 
-.cardsTecs, .cardsSoft {
+.cardsTecs,
+.cardsSoft {
     grid-column: 2 / span 12;
     display: grid;
     column-gap: 40px;
